crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__literal__invalid_literal_2.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "format!(\"--- before\\n{}\\n{left:?}\\n--- after\\n{}\\n{right:?}\", pretty(root),\npretty(after))"
---
--- before
case@Int 7 of
  7 -> 42
  7 -> 42
  _ -> 0
InvalidCase("invalid literal branch")
--- after
case@Int 7 of
  7 -> 42
  7 -> 42
  _ -> 0
InvalidCase("invalid literal branch")
