crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__literal__selected_delay.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
force (case@Int 7 of
  7 -> delay (trace "forced" in 42))
--- unoptimized UPLC
(program 1.1.0
  (force
    [(lam generated_1
      (case
        [[(builtin equalsInteger) generated_1] (con integer 7)]
        (error)
        (delay
          (force
            [[(force (builtin trace)) (con string "forced")] (delay (con integer 42))]))))
      (con integer 7)]))
--- optimized Core
trace "forced" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "forced")] (delay (con integer 42))]))
    (force (builtin trace))])
--- isolated pass
--- core before
force (case@Int 7 of
  7 -> delay (trace "forced" in 42))
--- uplc before
(program 1.1.0
  (force
    [(lam generated_1
      (case
        [[(builtin equalsInteger) generated_1] (con integer 7)]
        (error)
        (delay
          (force
            [[(force (builtin trace)) (con string "forced")] (delay (con integer 42))]))))
      (con integer 7)]))
--- core after
force (delay (trace "forced" in 42))
--- uplc after
(program 1.1.0
  (force
    (delay
      (force
        [[(force (builtin trace)) (con string "forced")] (delay (con integer 42))]))))
--- result
(con integer 42)
--- logs
["forced"]
